tooltips and such on grades

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1254,6 +1254,8 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
 }
 
 #organization_portal {
+  padding: 8px 8px 0 8px;
+  
   .header{
     
   }
