making challenge create flow better for group ppl

--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -61,4 +61,4 @@
               
             
         %div.row{ style: "margin: 40px auto 30px;" }
-          = f.submit @evaluation.new_record? ? "Create Evaluation" : "Save Evaluation", class: "button button-xlarge button-actionable"
+          = f.submit @evaluation.new_record? ? "Create Evaluation" : "Save Evaluation", class: "button button-actionable"
