--- a/app/views/evaluations/show.html.haml
+++ b/app/views/evaluations/show.html.haml
@@ -60,7 +60,7 @@
                   #{time_ago_in_words(e.submitted_at)} ago
               %td
                 - if e.favorited_at
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Badges/star_yellow.png", style: "width: 15px; height: 15px; margin-top: -3px;" }
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Badges/star_yellow.png", style: "width: 15px; height: 15px; margin-top: -3px;", title: "Favorited" }
           - if @archive_exists
             %tr
               %td{ style: "border: none; "}
