--- a/app/views/search/_results.html.haml
+++ b/app/views/search/_results.html.haml
@@ -1,26 +1,36 @@
-.single_pane
-  .button.button_standard{ onclick: "$('#results').hide();$('#search').show();" } Back
-  .pull-right #{@results[:users].size} Results
-  - if @results[:users].empty?
-    %p Empty search results. Please broaden your search and try again.
-  - else
-    %table.table
-      %thead
-        %tr
-          %th Name
-          - @results[:paths].each do |path|
-            %th= path.name
-          %th Avg MetaScore
-          %th Price
-      - @results[:users].each do |user|
-        %tr
-          %td
-            = user[:location]
-          - user[:enrollments].each do |e|
-            %td
-              = Search.rating(e[:metapercentile])
-          %td
-            = user[:total_metascore]
-          %td
-            = user[:price]
+:css
+  .form-horizontal li.controls { margin-left: 155px; }
+  body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+  .aboutbox{ border-radius: 0; }
+  .aboutbox .header { margin-bottom: 10px; }
+  .aboutcontainer{ width: 950px; background-color:rgba(36, 72, 109, 0.8); margin-top: -35px; border-radius: 0;  }
+
+#search.aboutcontainer
+  .aboutbox
+    .header
+      .button.button_standard{ onclick: "$('#results').hide();$('#search').show();" } Back
+      .pull-right #{@results[:users].size} Results
+    .body
+      - if @results[:users].empty?
+        %p Empty search results. Please broaden your search and try again.
+      - else
+        %table.table
+          %thead
+            %tr
+              %th Name
+              - @results[:paths].each do |path|
+                %th= path.name
+              %th Avg MetaScore
+              %th Price
+          - @results[:users].each do |user|
+            %tr
+              %td
+                = user[:location]
+              - user[:enrollments].each do |e|
+                %td
+                  = Search.rating(e[:metapercentile])
+              %td
+                = user[:total_metascore]
+              %td
+                = user[:price]
         
