Changing developer language to search.

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -27,7 +27,7 @@
           %li.navitem{ title: "Search", style: "height: 100%;" }
             = link_to new_group_search_url(@admin_group) do
               = image_tag NAVBAR_API, alt: "Search"  
-              %span Developer
+              %span Search
       - elsif current_user and show_nav_bar
         %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid #020D25; border-right: 1px solid #56698B;" }
           %li.navitem{ title: "Home", style: "height: 100%; border-left: 1px solid #56698B;" }
