--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -73,7 +73,7 @@
           .option{ style: "border-top: 1px solid #DDD; border-left: 1px solid #DDD; margin-left: -4px;"}
             %div
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/icon_api.png"
-              %h3 API
+              %h3 Search
     
 
         
