--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -1,6 +1,6 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 950px; background: rgba(36, 72, 109, 0.8); }
+  .aboutcontainer{ width: 950px; background: rgba(36, 72, 109, 0.8); margin-top: 0px; }
 
 #employer1.aboutcontainer
   .aboutbox
@@ -10,29 +10,27 @@
     .body
       %div
         %h4 Submit this form and someone from our team will get in touch to learn about your business and to get you set up. If it turns out MetaBright isn't for you, you're under no obligation to complete the transaction.
-      = form_for(@opportunity, url: opportunity_path, html: { class: "form-horizontal" }) do |f|
+      = form_for(@new_group, html: { class: "form-horizontal" }) do |f|
         .control-group
           %label.control-label Product: 
           .controls{ style: "margin-top: 4px; "}
-            %span{ style: "font-size: 18px; "}= Opportunity::PRODUCTS[@opportunity.product.to_i]
-            = f.hidden_field :product
-            = link_to "Change", "javascript:history.back()", style: "margin-left: 10px; "
+            %span{ style: "font-size: 18px; "}= Opportunity::PRODUCTS[params[:product].to_i]
         .control-group
-          %label.control-label{ for: "inputName"} Your Name
+          %label.control-label Your Name
           .controls
-            = f.text_field :name, placeholder: "Your name..."
+            = f.text_field :creator_name, placeholder: "Your name..."
         .control-group
-          %label.control-label{ for: "inputCompanyName"} Company Name
+          %label.control-label Company Name
           .controls
-            = f.text_field :company, placeholder: "Company name..."
+            = f.text_field :name, placeholder: "Your Company name..."
         .control-group
-          %label.control-label{ for: "inputEmail"} Email
+          %label.control-label Email
           .controls
-            = f.text_field :email, placeholder: "Email..."
+            = f.text_field :creator_email, placeholder: "Email..."
         .control-group
-          %label.control-label{ for: "inputPhone"} Phone
+          %label.control-label Password
           .controls
-            = f.text_field :phone, placeholder: "Phone..."
+            = f.text_field :creator_password, placeholder: "Password..."
         .control-group
           .controls
             = f.submit "Submit", class: "button button-actionable"
