--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -23,7 +23,7 @@
             =link_to "Edit settings", professional_settings_path(current_user.signup_token), style:"vertical-align: top; margin-left: 12px;"
           %hr{ style: "margin: 10px 0; border-top: 1px solid rgb(213, 213, 213);"}       
           %div
-            %p{ style: "font-size: 15px; word-break: normal; width: 72%; display: inline-block; " } Customize your profile! You can directly the edit the CSS of your profile page to give it your own look and feel and showcase your skills.
+            %p{ style: "font-size: 15px; word-break: normal; width: 72%; display: inline-block; " } Customize your profile! You can directly the edit the CSS of your profile to give it your own style to best showcase your skills.
             =link_to "Customize Profile", style_user_path(current_user.username), style:"vertical-align: top; margin-left: 12px;"
         %div{ style:"vertical-align: top; display: inline-block; margin: 0 20px 5px 0;" }
           %div.control-group
