--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -66,7 +66,7 @@
                     %div.nub{ style: "left:150px;" }
                   - if @groups and @groups.size > 0                    
                     %div.leftboxheader Your Groups
-                    %div.leftboxfooter{style:"padding:0; background-color:white; border-bottom: 1px solid #DDD; border-radius: 0; "}
+                    %div.leftboxfooter{style:"padding:0; background-color:white; border-bottom: 1px solid #DDD;"}
                       - @groups.each do |group|
                         = link_to root_url(g: group.id), style: "text-decoration: none; padding: 0;" do
                           %div.singlegroupentry{ style: "padding: 6px 12px; "}
@@ -74,18 +74,19 @@
                             %div{ style: "margin-left: 5px; display: inline-block; color: gray; vertical-align: middle; "}
                               %div{ style: "font-size: 20px; line-height: 23px; "} #{truncate(group.name, length:22, separator: ' ')}
                               %div{ style: "font-size: 13px; "} #{truncate(group.description, length: 41, separator: ' ')}
-                  %div.leftboxheader Your Challenges
-                  %div.leftboxfooter{style:"padding:0; background-color:white; max-height: 412px; overflow-y:auto;"}
-                    - current_user.enrollments.includes(:path).where("total_points > 0").order("total_points DESC").each do |e|
-                      = link_to challenge_path(e.path.permalink), style:"padding:0;" do
-                        %div.singleprogressentry
-                          = image_tag e.path.image, style: "width: 50px; height: 50px;", alt: "#{e.path.name}"            
-                          %div.challengeprogress
-                            %span{ style: "font-size:18px;"} #{truncate(e.path.name,length: 18, separator: ' ')}
-                            %span{style: "font-size:14px; float:right; "} Level #{e.level}
-                            %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} #{e.points_to_next_level} more points to level up!
-                            %div.progress.progress-info
-                              %div.bar{ style: "width: #{e.level_percent}%;"}
+                  - unless @groups
+                    %div.leftboxheader Your Challenges
+                    %div.leftboxfooter{style:"padding:0; background-color:white; max-height: 412px; overflow-y:auto;"}
+                      - current_user.enrollments.includes(:path).where("total_points > 0").order("total_points DESC").each do |e|
+                        = link_to challenge_path(e.path.permalink), style:"padding:0;" do
+                          %div.singleprogressentry
+                            = image_tag e.path.image, style: "width: 50px; height: 50px;", alt: "#{e.path.name}"            
+                            %div.challengeprogress
+                              %span{ style: "font-size:18px;"} #{truncate(e.path.name,length: 18, separator: ' ')}
+                              %span{style: "font-size:14px; float:right; "} Level #{e.level}
+                              %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} #{e.points_to_next_level} more points to level up!
+                              %div.progress.progress-info
+                                %div.bar{ style: "width: #{e.level_percent}%;"}
             %li
               %div.dropdown.pull-right.notification-icon{ style: "padding-top: 11px;" }
                 %a.dropdown-toggle{ "data-toggle" => "dropdown", onclick: "mark_notifications_as_read();", style: "padding:10px;" }
