--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1498,6 +1498,13 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
             margin-bottom: 30px;
           }
         }
+        .skipped_cr{
+          padding: 6px 17px;
+          background-color:$employer_orange_light;
+          
+          img { height: 22px; }
+          p {display: inline-block; margin-left: 5px; }
+        }
       }
     }
   }
