--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -2,11 +2,17 @@
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .aboutcontainer{ width: 900px;}
   p { margin-top: 5px; }
+
+:javascript
+  $(function(){
+    $('.textfill').textfill({ maxFontPixels: 50 });
+  });
   
 #employer.aboutcontainer
   #take_evaluation.aboutbox
     .header
-      %h1= @evaluation.title
+      %h1.textfill
+        %span=@evaluation.title
       %h3= @evaluation.company
     .welcome
       .holder
