--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -11,7 +11,7 @@
 #employer.aboutcontainer
   #take_evaluation.aboutbox
     .header
-      %h1.textfill
+      %h1.textfill.take_eval
         %span=@evaluation.title
       %h3= @evaluation.company
     .welcome
