Getting subscriptions working.

--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -30,7 +30,7 @@
         .control-group
           %label.control-label Password
           .controls
-            = f.text_field :creator_password, placeholder: "Password..."
+            = f.password_field :creator_password, placeholder: "Password..."
         .control-group
           .controls
             = f.submit "Submit", class: "button button-actionable"
